ReactApp/ingress-service.yaml
#https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: internal.path.to.argocd.io
    - http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /httpd(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: httpd
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /react(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: my-app-np
                port:
                  number: 3000

  tls:
    - hosts:
        - internal.path.to.argocd.io
      secretName: your-certificate-name
